--- a/style.css
+++ b/style.css
@@ -3,8 +3,13 @@ html::before{
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(#020024, #650979,#2b7dc6);
+    background-image: linear-gradient(#13293d, #006494,#247ba0, #1b98e0);
     z-index: -1;
+}
+
+.a{
+    text-decoration: none;
+    color: #fff;
 }
 
 #btn{
@@ -14,17 +19,24 @@ html::before{
     border: 1px solid #2b7dc6;
 }
 
+#btn:hover{
+    background-color: #335c81;
+    color: #fff;
+}
+
 .mf{
     color: #fff;
     font-size: 20px;
     display: flex;
 }
 
-#lf{
-    width: 500px;
+#ff{
+    width: 600px;
+    background-color: #fff;
+    color: #000;
 }
 
-.lista-funcionarios{
+.ff{
     display: flex;
     align-items: center;
     justify-content: center;
